tests/ui/pattern/usefulness/issue-82772-match-box-as-struct.stderr
error[E0451]: field `1` of struct `Box` is private
  --> $DIR/issue-82772-match-box-as-struct.rs:4:15
   |
LL |     let Box { 1: _, .. }: Box<()>;
   |               ^ private field

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0451`.
